# bmkgw-server

./: Cargo.toml
src/: error.rs  main.rs
src/routes/: cuaca.rs  gempa.rs  mod.rs
