[package]
name = "bmkgw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bmkgw = { git = "https://gitlab.com/akane10/bmkgw", branch = "master" }
serde = "1.0.160"
serde_json = "1.0.96"
redis = "0.23.0"
