[package]
name = "bmkgw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bmkgw = { git = "https://gitlab.com/akane10/bmkgw", branch = "master" }
serde = "1.0.160"
serde_json = "1.0.96"
redis = "0.23.0"
actix-web-httpauth = "0.8.0"
dotenv = "0.15.0"
actix-cors = "0.6.4"
env_logger = "0.10.0"
